--- a/app/src/main/res/layout/camerascreen.xml
+++ b/app/src/main/res/layout/camerascreen.xml
@@ -8,6 +8,8 @@
     android:background="@color/black"
     tools:context=".MainActivity12">
 
+
+
 <!--    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,7 +18,11 @@
         android:id="@+id/top"
         />-->
 
+
+<!--    main image-->
+
     <ImageView
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/img_12"
@@ -57,6 +63,8 @@
         android:textSize="17sp"
         android:id="@+id/type3"
         />
+
+<!--    icons-->
 
     <ImageView
         android:layout_width="30dp"
