--- a/app/src/main/res/layout/chatscreen.xml
+++ b/app/src/main/res/layout/chatscreen.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".MainActivity6">
-
+<!--
+    top bar-->
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
@@ -60,6 +61,8 @@
             />
     </LinearLayout>
 
+
+<!--    bottom bar-->
 
     <LinearLayout
         android:id="@+id/inputBar"
@@ -131,6 +134,7 @@
         </RelativeLayout>
     </LinearLayout>
 
+<!--    heelo text-->
 
     <TextView
         android:layout_width="100dp"
