--- a/app/src/main/res/layout/editprofilescreen.xml
+++ b/app/src/main/res/layout/editprofilescreen.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+<!--        top bar-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -81,6 +82,8 @@
                 android:background="@color/white"
                 >
 
+  <!--              profile photo-->
+
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
@@ -102,6 +105,8 @@
                     android:textStyle="bold"
                     android:id="@+id/change"
                     />
+
+<!--                edit profile form -->
 
                 <View
                     android:layout_width="wrap_content"
@@ -273,6 +278,8 @@
                     android:textColor="#935855"
                     android:id="@+id/switchacc"
                     />
+
+    <!--            private info-->
 
                 <TextView
                     android:layout_width="wrap_content"
