--- a/app/src/main/res/layout/explorescreen.xml
+++ b/app/src/main/res/layout/explorescreen.xml
@@ -9,6 +9,8 @@
     tools:context=".MainActivity15"
     >
 
+<!--    // bottom navbar -->
+
     <RelativeLayout
         android:id="@+id/tabbar"
         android:layout_width="match_parent"
@@ -68,6 +70,8 @@
             app:civ_border_color="#935855"
             app:civ_border_width="3dp"/>
     </RelativeLayout>
+
+<!--    // top sreach bar-->
 
     <LinearLayout
         android:id="@+id/inputBar"
@@ -199,6 +203,8 @@
 
     </LinearLayout>
 
+<!--    //scrollable page-->
+
     <ScrollView
         android:id="@+id/scrollArea"
         android:layout_width="match_parent"
@@ -221,6 +227,8 @@
             android:layout_height="240dp"
             android:orientation="horizontal"
             android:weightSum="3">
+<!--
+            Images grid-->
 
         <LinearLayout
             android:layout_width="0dp"
