--- a/app/src/main/res/layout/followingprofilescreen.xml
+++ b/app/src/main/res/layout/followingprofilescreen.xml
@@ -8,7 +8,7 @@
     android:background="@color/white"
     tools:context=".MainActivity13">
 
-    <!-- Bottom tab bar (fixed) -->
+    <!-- Bottom bar  -->
     <ImageView
         android:id="@+id/tabbar"
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
         android:layout_alignParentBottom="true"
         android:src="@drawable/tab_bar" />
 
-    <!-- Top bar (fixed) -->
+    <!-- Top bar -->
     <RelativeLayout
         android:id="@+id/top"
         android:layout_width="match_parent"
@@ -58,8 +58,8 @@
             android:src="@drawable/options" />
     </RelativeLayout>
 
-    <!-- Scrollable content between top and bottom -->
-    <androidx.core.widget.NestedScrollView
+    <!-- Scrollable page -->
+    <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -414,7 +414,7 @@
                 android:layout_marginTop="8dp"
                 android:src="@drawable/line2" />
 
-            <!-- Photos grid now anchored below line2 -->
+            <!-- Photos grid  -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -447,6 +447,6 @@
             </LinearLayout>
 
         </RelativeLayout>
-    </androidx.core.widget.NestedScrollView>
+    </ScrollView>
 
 </RelativeLayout>
