--- a/app/src/main/res/layout/highlightsscreen.xml
+++ b/app/src/main/res/layout/highlightsscreen.xml
@@ -8,6 +8,7 @@
     android:background="@drawable/img_9"
     tools:context=".MainActivity8">
 
+<!--    bottom bar-->
 
     <TextView
         android:layout_width="match_parent"
@@ -17,6 +18,8 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/bottombar"
         />
+
+<!--    top things-->
 
     <TextView
         android:layout_width="wrap_content"
@@ -82,6 +85,8 @@
         android:id="@+id/sound"
         />
 
+<!--    // top lines of the highlights multiple-->
+
     <View
         android:layout_width="70dp"
         android:layout_height="3dp"
@@ -133,10 +138,6 @@
         android:id="@+id/line5"
         android:layout_marginStart="8dp"
         />
-
-
-
-
 
 
     <!--    <TextView
