--- a/app/src/main/res/layout/inboxscreen.xml
+++ b/app/src/main/res/layout/inboxscreen.xml
@@ -15,6 +15,8 @@
         android:orientation="vertical">
 
 
+<!--        top bar search and label-->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -95,8 +97,10 @@
                     />
 
             </RelativeLayout>
-
         </LinearLayout>
+
+<!--        scrollable middle inbox content-->
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -175,10 +179,9 @@
                             />
 
                     </RelativeLayout>
-
-
-
                 </LinearLayout>
+
+       <!--         multiple copies of the above chat -->
 
                 <LinearLayout
                     android:layout_width="match_parent"
