--- a/app/src/main/res/layout/signupscreen.xml
+++ b/app/src/main/res/layout/signupscreen.xml
@@ -14,6 +14,8 @@
         android:paddingTop="32dp"
         android:paddingEnd="16dp">
 
+        <!--logo-->
+
         <TextView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
@@ -67,6 +69,8 @@
                 android:src="@drawable/camera"
                 app:tint="#3C3C3C" />
         </RelativeLayout>
+
+      <!--  scrollable sign up form-->
 
         <ScrollView
             android:layout_width="match_parent"
@@ -209,6 +213,8 @@
                     android:textColorHint="#80FFFFFF"
                     android:textSize="25dp"
                     android:textStyle="bold" />
+
+                <!--sign up button , unable to make it rectagle-->
 
                 <Button
                     android:id="@+id/createAccountBtn"
