--- a/app/src/main/res/layout/younotifs.xml
+++ b/app/src/main/res/layout/younotifs.xml
@@ -8,6 +8,8 @@
     android:background="@color/white"
     tools:context=".MainActivity17">
 
+  <!--  bottom nav bar-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,6 +18,8 @@
         android:layout_above="@id/bottombar"
         >
 
+
+        <!--top bar-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -56,11 +60,11 @@
                     />
 
                 <View
-                    android:layout_width="180dp"
+                    android:layout_width="230dp"
                     android:layout_height="3dp"
                     android:layout_below="@id/folowing"
                     android:background="@drawable/line"
-                    android:backgroundTint="#935855"
+                    android:backgroundTint="#66888888"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="30dp"
                     android:id="@+id/line"
@@ -71,7 +75,7 @@
                     android:layout_toRightOf="@id/folowing"
                     android:layout_below="@id/You"
                     android:background="@drawable/line"
-                    android:backgroundTint="#66888888"
+                    android:backgroundTint="#935855"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="30dp"
                     android:layout_marginStart="30dp"
@@ -82,6 +86,8 @@
             </RelativeLayout>
 
         </LinearLayout>
+
+        <!--scrollable requests-->
 
         <ScrollView
             android:layout_width="match_parent"
@@ -98,7 +104,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 >
-                <!-- ===== Header ===== -->
+
                 <TextView
                     android:id="@+id/follow_requests"
                     android:layout_width="wrap_content"
@@ -130,7 +136,6 @@
                     android:textStyle="bold"
                     android:textSize="14sp" />
 
-                <!-- ===== Row: karennne liked your photo. 1h ===== -->
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/new_avatar"
                     android:layout_width="42dp"
@@ -150,7 +155,6 @@
                     android:layout_alignTop="@id/new_avatar"
                     android:src="@drawable/img_36" />
 
-                <!-- inline text: name (bold) + action + time -->
                 <TextView
                     android:id="@+id/new_name"
                     android:layout_width="wrap_content"
@@ -188,7 +192,7 @@
                     android:textSize="15sp"
                     android:textColor="#9A9A9A" />
 
-                <!-- optional divider under the row -->
+                <!--  divider -->
                 <View
                     android:id="@+id/new_row_divider"
                     android:layout_width="match_parent"
@@ -197,7 +201,7 @@
                     android:layout_marginTop="20dp"
                     android:background="#EDEDED"/>
 
-                <!-- ===== Section label ===== -->
+
                 <TextView
                     android:id="@+id/today_label"
                     android:layout_width="wrap_content"
@@ -210,9 +214,8 @@
                     android:textStyle="bold"
                     android:textSize="14sp" />
 
-                <!-- ===== Row: kiero_d, zackjohn and 26 others liked your photo. 3h ===== -->
 
-                <!-- left avatars (overlap) -->
+                <!-- overlap avatars -->
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/today_a1"
                     android:layout_width="36dp"
@@ -231,7 +234,6 @@
                     android:layout_marginStart="-12dp"
                     android:src="@drawable/img_3" />
 
-                <!-- right thumbnail -->
                 <ImageView
                     android:id="@+id/today_thumb"
                     android:layout_width="50dp"
@@ -242,7 +244,6 @@
                     android:layout_alignTop="@id/today_a1"
                     android:src="@drawable/img_36" />
 
-                <!-- top line: names + count (bold) -->
                 <TextView
                     android:id="@+id/today_names"
                     android:layout_width="wrap_content"
@@ -270,7 +271,6 @@
                     android:textSize="15sp"
                     android:textColor="@color/black" />
 
-                <!-- bottom line -->
                 <TextView
                     android:id="@+id/today_bottom"
                     android:layout_width="wrap_content"
@@ -303,7 +303,6 @@
                     android:layout_marginTop="20dp"
                     android:background="#EDEDED" />
 
-                <!-- ===== Section label ===== -->
                 <TextView
                     android:id="@+id/week_label"
                     android:layout_width="wrap_content"
@@ -316,7 +315,6 @@
                     android:textSize="14sp"
                     android:textColor="@color/black" />
 
-                <!-- left avatar -->
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/week_a1"
                     android:layout_width="36dp"
@@ -326,7 +324,6 @@
                     android:layout_marginTop="10dp"
                     android:src="@drawable/img_4" />
 
-                <!-- right thumbnail -->
                 <ImageView
                     android:id="@+id/week_thumb"
                     android:layout_width="50dp"
@@ -337,8 +334,7 @@
                     android:layout_alignTop="@id/week_a1"
                     android:src="@drawable/img_49" />
 
-                <!-- top line: name (bold) + action + comment: + mention + rest -->
-                <TextView
+                 <TextView
                     android:id="@+id/week_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -393,7 +389,7 @@
                     android:textSize="15sp"
                     android:textColor="@color/black"/>
 
-                <!-- time line under the text -->
+
                 <TextView
                     android:id="@+id/week_time"
                     android:layout_width="wrap_content"
@@ -405,7 +401,6 @@
                     android:textSize="14sp"
                     android:textColor="#9A9A9A"/>
 
-                <!-- small reply row -->
                 <ImageView
                     android:id="@+id/week_reply_icon"
                     android:layout_width="18dp"
@@ -429,7 +424,7 @@
                     android:textSize="14sp"
                     android:textColor="#9A9A9A"/>
 
-                <!-- divider under this block -->
+                <!-- divider  -->
                 <View
                     android:id="@+id/week_divider"
                     android:layout_width="match_parent"
@@ -438,7 +433,6 @@
                     android:layout_marginTop="16dp"
                     android:background="#EDEDED"/>
 
-                <!-- ===== Row 1: martini_rond started following you. 3d ===== -->
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/f1_avatar"
                     android:layout_width="44dp"
@@ -509,7 +503,6 @@
                     android:layout_marginTop="16dp"
                     android:background="#EDEDED" />
 
-                <!-- ===== Row 2: maxjacobson started following you. 3d (Message) ===== -->
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/f2_avatar"
                     android:layout_width="44dp"
@@ -578,7 +571,6 @@
                     android:layout_marginTop="16dp"
                     android:background="#EDEDED" />
 
-                <!-- ===== Row 3: mis_potter started following you. 3d (Follow filled) ===== -->
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/f3_avatar"
                     android:layout_width="44dp"
@@ -680,7 +672,6 @@
                     android:layout_alignTop="@id/lastavatar"
                     android:src="@drawable/img_36" />
 
-                <!-- inline text: name (bold) + action + time -->
                 <TextView
                     android:id="@+id/lastname"
                     android:layout_width="wrap_content"
@@ -718,7 +709,7 @@
                     android:textSize="15sp"
                     android:textColor="#9A9A9A" />
 
-                <!-- optional divider under the row -->
+                <!--  divider  -->
                 <View
                     android:id="@+id/lastdiv"
                     android:layout_width="match_parent"
@@ -728,13 +719,13 @@
                     android:background="#EDEDED"/>
 
 
-
-
-
             </RelativeLayout>
 
         </ScrollView>
     </LinearLayout>
+
+    <!--Bottom nav bar-->
+
     <RelativeLayout
         android:id="@+id/bottombar"
         android:layout_width="match_parent"
